# stimela

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  DEVNOTES.md  MANIFEST.in  README.rst  pyproject.toml  readthedocs.yaml  ruff.toml  scabha_tests  setup.py  stimela_tests
.github/workflows/: python-package.yml  python-publish.yml
docs/: examples.rst
docs/source/: api.rst  authors.rst  citation.rst  conf.py  index.rst  installation.rst  readme.rst  usage.rst
essays/: create-eks-cluster.py
plan/: migrate_pydantic.md  progress.md
scabha/: __init__.py  basetypes.py  cab_utils.py  cargo.py  configuratt.py  dataclass_utils.py  evaluator.py  exceptions.py  logging_utils.py  proc_utils.py  schema_utils.py  substitutions.py  types.py  validate.py
scabha/configuratt/: __init__.py  cache.py  common.py  core.py  deps.py  helpers.py  resolvers.py
src/stimela/: __init__.py  task_stats.py
stimela/: __init__.py  _patches.py  config.py  deprecation.py  display.py  evaluator_patches.py  exceptions.py  main.py  stimela.conf  stimelogging.py  task_stats.py  tests
stimela/api/: __init__.py  annotations.py  cab_decorator.py  cab_proxy.py  execution.py  parallel.py  recipe_decorator.py  result.py
stimela/backends/: __init__.py  docker.py  native.py  podman.py  runner.py  singularity.py  slurm.py  slurm_runner.sh  ssh.py  utils.py
stimela/commands/: build.py  cabs.py  clean.py  cleanup.py  containers.py  doc.py  exxec.py  help.py  images.py  kill.py  ps.py  pull.py  push.py  run.py  save_config.py
stimela/configuratt/: __init__.py
stimela/display/: display.py
stimela/kitchen/: batch.py  cab.py  cache.py  recipe.py  run_state.py  runners.py  step.py  utils.py  wranglers.py
stimela/monitoring/: __init__.py  kube.py  local.py  slurm.py
stimela/schedulers/: __init__.py  slurm.py
stimela/tests/: test_aliasing.yml  test_dynschema.py  test_loop_recipe.yml  test_nesting.yml  test_recipe.py  test_recipe.yml  test_xrun.yml
stimela/utils/: __init__.py  xrun_asyncio.py  xrun_poll.py
stimela_tests/: __init__.py  test_callables.yml  test_recipe.yml
test/: test_callables.yml  test_param_file.py
tests/: __init__.py  conftest.py  example_file_callable.py  log-stimela.txt  param_file_none_section.yml  stimela.config.deps  test_abbreviate_repr.py  test_apptainer_backend.py  test_backend_validation_singularity_native.py  test_backends.py  test_backends.yml  test_bool_flags.yml  test_cache.py  test_cache_integration.py  test_cache_integration.yml  test_callables.py  test_callables.yml  test_clean.py  test_clean.yml  test_cli_assign.yml  test_cli_issues.py  test_complex_type_coercion.py  test_conditional_skips.py  test_deeply_nested_formula.py  test_deeply_nested_formula.yml  test_deprecation.py  test_deprecation.yml  test_file_callable.py  test_file_callable.yml  test_file_callable_utils.py  test_forloop_assign.yml  test_issue290_remove_on_error.py  test_issue324.yml  test_issue364.yml  test_issue449_slicing.py  test_issue449_slicing.yml  test_issue491_skip_conditionals.py  test_issue491_skip_conditionals.yml  test_issue530.yml  test_issue552.yml  (+30 more)
tests/scabha_tests/: test_clickify.py  test_clickify.yaml  test_configuratt.py  test_dynschema.py  test_filelikes.py  test_include.yaml  test_include2.yaml  test_nest_a.yml  test_nest_b.yml  test_nest_c.yml  test_parsing.py  test_recursive_include.yml  test_recursive_include2.yml  test_schema.py  test_schema.yaml  test_substitutions.py  test_validate.py  testconf.yaml
tests/stimela_tests/: example_callable.py  param_file.yml  test_aliasing.yml  test_api.py  test_backend_validation_singularity_native.py  test_backends.yml  test_cab_no_image.py  test_callables.py  test_callables.yml  test_casa.yml  test_conditional_skips.py  test_conditional_skips.yml  test_dask_storage_options.json  test_dask_storage_options.yaml  test_flow_control.py  test_grumbles.py  test_grumbles.yml  test_issue527.yml  test_kube.yml  test_kube_config.yml  test_kube_qc.yml  test_kube_scatter.yml  test_len_loop.yml  test_loop_recipe.yml  test_nesting.yml  test_notify.py  test_notify.yml  test_output_elements.yml  test_param_file.py  test_param_file.yml  (+10 more)
(+130 files in other folders)
