[project]
name = "stimela"
version = "2.2.0rc"
description = "Framework for system agnostic pipelines for (not just) radio interferometry"
authors = [
    { name = "Oleg Smirnov and RATT", email = "osmirnov@gmail.com" },
    { name = "Sphesihle Makhathini", email = "sphemakh@gmail.com" },
]
requires-python = ">=3.9,<3.14"
readme = "README.rst"
license = "GPL-2.0-only"
license-files = ["LICENSE"]
dependencies = [
    "munch>=2.5.0,<3",
    "python-benedict>=0.34.1,<0.35",
    "networkx>=3.0.0",
    "scabha @ /home/sphemakh/work/softdev/scabha" # Rremove when divorce is complete
]

[tool.hatch.metadata]
allow-direct-references = true


[project.scripts]
stimela = "stimela.main:cli"

[dependency-groups]
tests = [
    "pytest>=7.1.3,<8",
    "flake8",
]
docs = [
    "Sphinx>=5.3.0,<6",
    "sphinx-copybutton>=0.5.0,<0.6",
    "furo>=2022.9.15,<2023",
    "docutils>=0.19,<1.0",
]

dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.9",
]

[tool.uv]
default-groups = [
    "tests",
    "docs",
]

[tool.hatch.build.targets.sdist]
include = [
    "stimela",
]

[tool.hatch.build.targets.wheel]
include = [
    "stimela",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

